updated code & dependent files

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,9 +3,33 @@
 }
 .carousel-inner img{
     width: 100vw;
-    height: 100vh;
 }
-.carousel-item img{
-    max-width: 100vw;
-    height: auto;
+.carousel-caption{
+    font-family: 'Indie Flower',cursive;
+    font-size: 1.5em;
+    color: lightskyblue !important;
+}
+.carousel-caption h2{
+    font-weight: bolder;
+}
+.carousel-indicators li{
+    visibility: hidden;
+}
+.card img{
+    height: 30vh !important;
+}
+.fa-facebook:hover{
+    color: #3b5998;
+}
+.fa-twitter:hover{
+    color: #1da1f2
+}
+.fa-google-plus:hover{
+    color: #dd4b39;
+}
+.fa-linkedin:hover{
+    color: #0077b5;
+}
+.page-font{
+    font-family: 'Comfortaa',cursive;
 }
